data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2236.wast
;; 7. **Test Description**: A nested block structure mixing control instructions (like `if`, `else`, `end`) without proper termination.    **Constraint**: Ensuring that all control structures within blocks are properly opened and closed.    **Relation to Mismanagement**: Tests error detection when control structures are mis-nested.    ```    block    ;; level 0      block  ;; level 1        if          else        ;; missing end for if      end    end    ```

(assert_invalid
  (module (func (result i32)
    (block
      (block
        (if (i32.const 1)
        (else))
      )
    )
  ))
  "unexpected end of section or function"
)